# studies

./: .gitignore
tests/: main.py  pyproject.toml  test.py
tests/doc/: tests.md
